// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`catalogFromOpenApi stream list > all listable tables (no webhook filter) 1`] = `
[
  "account",
  "apple_pay_domain",
  "application_fee",
  "balance_transaction",
  "billing_alert",
  "billing_credit_grant",
  "billing_meter",
  "billing_portal_configuration",
  "charge",
  "checkout_session",
  "climate_order",
  "climate_product",
  "climate_supplier",
  "country_spec",
  "coupon",
  "credit_note",
  "customer",
  "dispute",
  "early_fraud_warning",
  "event",
  "feature",
  "file",
  "file_link",
  "financial_connections_account",
  "forwarding_request",
  "identity_verification_report",
  "identity_verification_session",
  "invoice",
  "invoice_payment",
  "invoice_rendering_template",
  "invoiceitem",
  "issuing_authorization",
  "issuing_card",
  "issuing_cardholder",
  "issuing_dispute",
  "issuing_personalization_design",
  "issuing_physical_bundle",
  "issuing_transaction",
  "payment_intent",
  "payment_link",
  "payment_method",
  "payment_method_configuration",
  "payment_method_domain",
  "payout",
  "plan",
  "price",
  "product",
  "promotion_code",
  "quote",
  "radar_value_list",
  "refund",
  "reporting_report_run",
  "reporting_report_type",
  "review",
  "scheduled_query_run",
  "setup_intent",
  "shipping_rate",
  "subscription",
  "subscription_schedule",
  "tax_code",
  "tax_id",
  "tax_rate",
  "tax_registration",
  "terminal_configuration",
  "terminal_location",
  "terminal_reader",
  "test_helpers_test_clock",
  "topup",
  "transfer",
  "treasury_financial_account",
  "v2_core_account",
  "v2_core_event",
  "v2_core_event_destination",
  "webhook_endpoint",
]
`;

exports[`catalogFromOpenApi stream list > default: only tables with webhook events 1`] = `
[
  "account",
  "application_fee",
  "billing_alert",
  "billing_credit_grant",
  "billing_meter",
  "billing_portal_configuration",
  "charge",
  "checkout_session",
  "climate_order",
  "climate_product",
  "coupon",
  "credit_note",
  "customer",
  "dispute",
  "early_fraud_warning",
  "file",
  "financial_connections_account",
  "identity_verification_session",
  "invoice",
  "invoice_payment",
  "invoiceitem",
  "issuing_authorization",
  "issuing_card",
  "issuing_cardholder",
  "issuing_dispute",
  "issuing_personalization_design",
  "issuing_transaction",
  "payment_intent",
  "payment_link",
  "payment_method",
  "payout",
  "plan",
  "price",
  "product",
  "promotion_code",
  "quote",
  "refund",
  "reporting_report_run",
  "reporting_report_type",
  "review",
  "scheduled_query_run",
  "setup_intent",
  "subscription",
  "subscription_schedule",
  "tax_id",
  "tax_rate",
  "terminal_reader",
  "test_helpers_test_clock",
  "topup",
  "transfer",
  "treasury_financial_account",
  "v2_core_account",
  "v2_core_event_destination",
]
`;
